# Complexity_from_Constraints

./: .gitignore  CITATION.cff  Complexity_from_Constraints.md  LLMS.txt  README.md  pyproject.toml  requirements.txt  summary.md
cf_logging/: __init__.py  metrics_log.py  observability.py
core/: __init__.py  agm_metrics.py  amortizer.py  coordinator.py  couplings.py  curriculum.py  energy.py  entity_adapter.py  gspo_token_vectorized.py  hierarchy.py  homotopy.py  info_metrics.py  interfaces.py  jax_backend.py  llm_adapter.py  meta_env.py  noise_controller.py  prox_utils.py  torch_backend.py  weight_adapters.py
docs/: CHECKLIST.md  CONSTRAINT_PROGRAMMING.md  DASHBOARD_P3.md  ENERGY_CONSERVATION_AND_MONOTONICITY.md  EXTENSION_of_framework_for_data_independent_Cyber_threat_entity_extraction.md  GSPO_SMALLGAIN_KL_ALLOCATOR.md  HIERARCHICAL_INFERENCE.md  INFORMATION_METRICS.md  ISO-ENERGY_ORTHOGONAL_NOISE.md  META_LEARNING.md  METRIC_AWARE_NOISE_CONTROLLER.md  MONOTONIC_ENERGY_SUMMARY.md  PHASE1_COMPLETION_SUMMARY.md  POLYNOMIAL_BASES.md  PRECISION_LAYER.md  PRECISION_LAYER_PHASE2.md  PROXIMAL_METHODS.md  README_AGM.md  README_CONSTRAINT_DICTIONARY.md  README_EXPERIMENTS.md  README_GATING.md  README_INJECTION_LOGIC.md  README_MODULES.md  README_SMALLGAIN.md  README_WHEN_TO_USE_NOISE.md  README_WORMHOLE.md  RELAXATION_METHOD.md  ROADMAP_CONSOLIDATION_REPORT.md  ROADMAP_NEUROSYMBOLIC_HOMEOSTAT.md  SMALLGAIN_VALIDATION.md  SMALLGAIN_VALIDATION_FINAL.md  STABILITY_GUARANTEES.md  STABILITY_MARGIN_ALLOCATOR.md  architecture.mmd
examples/: __init__.py  landau_plot.py  (+1 more)
(+153 files in other folders)
