[project]
name = "complexity-from-constraints"
version = "0.1.0"
description = "Small, composable modules coordinated by a global free-energy objective with sparse non-local couplings."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Oscar Goldman - Shogu research Group @ Datamutant.ai subsidiary of 温心重工業" }
]
dependencies = [
    "polars>=1.35",
    "numpy>=2.3",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
examples = [
    "matplotlib>=3.8",
]
torch = [
    "torch>=2.0",
]
jax = [
    "jax>=0.4",
    "jaxlib>=0.4",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "core",
    "modules",
    "models",
    "cf_logging",
    "experiments",
    "tests",
]


